syntax = "proto3";

option java_package = "com.twidere.twiderex.preferences.proto";
option java_multiple_files = true;

message AppearancePreferences {
  enum TabPosition {
    Top = 0;
    Bottom = 1;
  }

  enum Theme {
    Auto = 0;
    Light = 1;
    Dark = 2;
  }

  int32 primaryColorIndex = 1;
  TabPosition tapPosition = 2;
  Theme theme = 3;
}
